force-app/main/default/objects/User/fields/nitzap20__Connected__c.field-meta.xml
<CustomField>
    <fullName>nitzap20__Connected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nitzap Connected Status</label>
    <type>Checkbox</type>
</CustomField>