force-app/main/default/objects/User/fields/nitzap20__PersonalConfigs__c.field-meta.xml
<CustomField>
    <fullName>nitzap20__PersonalConfigs__c</fullName>
    <label>Configurações Pessoais</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>