force-app/main/default/objects/User/fields/nitzap20__Secret__c.field-meta.xml
<CustomField>
    <fullName>nitzap20__Secret__c</fullName>
    <label>Nitzap Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>