force-app/main/default/objects/User/fields/nitzap20__Server__c.field-meta.xml
<CustomField>
    <fullName>nitzap20__Server__c</fullName>
    <label>Nitzap Server</label>
    <length>255</length>
    <type>Text</type>
</CustomField>