force-app/main/default/objects/User/fields/nitzap20__SessionId__c.field-meta.xml
<CustomField>
    <fullName>nitzap20__SessionId__c</fullName>
    <label>Nitzap Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>