force-app/main/default/objects/User/fields/nitzap20__WhatsAppId__c.field-meta.xml
<CustomField>
    <fullName>nitzap20__WhatsAppId__c</fullName>
    <label>Nitzap WhatsApp Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>