force-app/main/default/objects/User/fields/SuperKanban__Last_Filter__c.field-meta.xml
<CustomField>
    <fullName>SuperKanban__Last_Filter__c</fullName>
    <label>Last Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>