force-app/main/default/objects/User/listViews/Nitzap.listView-meta.xml
<ListView>
    <fullName>Nitzap</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>nitzap20__WhatsAppId__c</columns>
    <columns>nitzap20__Connected__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>nitzap20__WhatsAppId__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Nitzap</label>
</ListView>